9-rancher/nginx-smart/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx-smart
  labels:
    name: svc-nginx-smart
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 80
  selector:
    name: nginx-smart
